[package]
name = "shapes"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }
bevy_egui = "0.26.0"
bevy_infinite_grid = { git = "https://github.com/XYCaptain/bevy_infinite_grid" }
bevy_mod_picking = "0.18.2"
rand = "0.8.5"
thiserror = "1.0.58"
